src/styles/partials/nav.scss
/*
  Nav
*/

.nav {
  padding: var(--base__size) 0;

  &__container {
    @media (min-width: 992px) {
      align-items: center;
      display: flex;
    }
  }

  &__logo {
    font-size: calc(var(--font__size) * 1.7);

    @media (min-width: 992px) {
      margin-right: auto;
    }
  }

  &__toggle {
    @media (max-width: 991.98px) {
      &:not(:checked) {
        ~ .nav__menu {
          display: none;
        }

        ~ .nav__label {
          transform: rotate(90deg);
        }
      }
    }
  }

  &__label {
    @media (max-width: 991.98px) {
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23000000' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
      background-position: center;
      background-repeat: no-repeat;
      background-size: 100%;
      display: inline-block;
      height: calc(2 * var(--base__size));
      margin: var(--base__size);
      position: fixed;
      right: 0;
      top: 0;
      vertical-align: middle;
      width: calc(2 * var(--base__size));
    }
  }

  &__menu {
    @media (min-width: 992px) {
      display: flex;
    }
  }

  &__link {
    @media (min-width: 992px) {
      margin: 0 calc(var(--base__size) / 2);
    }

    &--item {
      display: block;
      padding: calc(var(--base__size) / 2);
      text-align: center;
      text-decoration: none;

      &.active {
        font-weight: 800;
      }
    }
  }
}

